<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivPickImage">

            <ImageView
                android:id="@+id/ivSelectedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"/>

            <LinearLayout
                android:id="@+id/evLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/ivPickImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            android:visibility="invisible"
            android:src="@drawable/ic_add_a_photo_black_24dp"/>

        <TextView
            android:id="@+id/tvResetText"
            style="@style/BlackXSmallTextStyle"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/reset_text"
            android:textAllCaps="true"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tvExport"
            style="@style/BlackXSmallTextStyle"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/export"
            android:textAllCaps="true"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tvEditText"
            style="@style/BlackXSmallTextStyle"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/edit_text"
            android:textAllCaps="true"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/llImageNotLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_placeholder"/>

            <TextView
                style="@style/BlackSmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/nothing_here"
                android:textAllCaps="true"/>

            <TextView
                style="@style/TextShadowSmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/add_some_awesome_pictures"/>
        </LinearLayout>

        <Button
            android:id="@+id/bPickImageFirst"
            style="@style/MediumSlateBlueButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/add_image"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAddDroidArt"
            style="@style/MediumSlateBlueButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:clickable="true"
            android:scaleType="center"
            android:visibility="invisible"
            app:borderWidth="0dp"
            android:src="@drawable/ic_plus_white_24dp"
            tools:ignore="KeyboardInaccessibleWidget"/>

    </RelativeLayout>

    <include layout="@layout/bottom_sheet_word_settings"/>

</android.support.design.widget.CoordinatorLayout>