<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow_background"
    android:orientation="vertical">

    <TextView
        style="@style/TextShadowSmallTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/add_new_image"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:scaleType="center"
                android:src="@drawable/ic_insert_photo_black_24dp"
                />

            <TextView
                style="@style/BlackSmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="32dp"
                android:text="@string/upload_from_gallery"/>

        </LinearLayout>

        <View
            android:id="@+id/vUploadFromGallery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            tools:ignore="KeyboardInaccessibleWidget"/>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:scaleType="center"
                android:src="@drawable/ic_camera_alt_black_24dp"
                />

            <TextView
                style="@style/BlackSmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="32dp"
                android:text="@string/use_camera"/>

        </LinearLayout>

        <View
            android:id="@+id/vUseCamera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            tools:ignore="KeyboardInaccessibleWidget"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:scaleType="center"
                android:src="@drawable/ic_cancel_alt_black_24dp"
                />

            <TextView
                style="@style/BlackSmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="32dp"
                android:text="@string/cancel"/>

        </LinearLayout>

        <View
            android:id="@+id/vCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            tools:ignore="KeyboardInaccessibleWidget"/>

    </FrameLayout>

</LinearLayout>